tests/duarouter/alternatives/style2_input/errors/vehicle/vehicle_id_empty/errors.duarouter
Error: Attribute 'id' in definition of a vehicle is empty.
Error: Invalid vehicle id ''.
Quitting (on error).
